--- a/public/de/index.html
+++ b/public/de/index.html
@@ -13,14 +13,14 @@
 <body>
 
     <nav class="nav">
-    <a href="/de/"><img class="nav" src="/ConformationLabWeb/images/ShipFoldLogo.png" alt="Logo"></a>
+    <a href="https://spikemurphy.github.io/de/"><img class="nav" src="/ConformationLabWeb/images/ShipFoldLogo.png" alt="Logo"></a>
     <ul class="nav">
-        <li class="nav"><a href="/de/">Startseite</a></li>
-        <li class="nav"><a href="/de/downloads/">Downloads</a></li>
-        <li class="nav"><a href="/de/Instructions/">Anleitung</a></li>
-        <li class="nav"><a href="/de/terms_of_use/">Nutzungsbedingungen</a></li>
-        <li class="nav"><a href="/de/privacy_policy/">Datenschutz</a></li>
-        <li class="nav"><a href="/de/legal_notice/">Impressum</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/de/">Startseite</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/de/downloads/">Downloads</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/de/instructions/">Anleitung</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/de/terms_of_use/">Nutzungsbedingungen</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/de/privacy_policy/">Datenschutz</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/de/legal_notice/">Impressum</a></li>
     </ul>
 </nav>
 
