--- a/public/en/index.html
+++ b/public/en/index.html
@@ -13,14 +13,14 @@
 <body>
 
     <nav class="nav">
-    <a href="/en/"><img class="nav" src="/ConformationLabWeb/images/ShipFoldLogo.png" alt="Logo"></a>
+    <a href="https://spikemurphy.github.io/en/"><img class="nav" src="/ConformationLabWeb/images/ShipFoldLogo.png" alt="Logo"></a>
     <ul class="nav">
-        <li class="nav"><a href="/en/">Home</a></li>
-        <li class="nav"><a href="/en/downloads/">Downloads</a></li>
-        <li class="nav"><a href="/en/Instructions/">Instructions</a></li>
-        <li class="nav"><a href="/en/terms_of_use/">Terms of Use</a></li>
-        <li class="nav"><a href="/en/privacy_policy/">Privacy Policy</a></li>
-        <li class="nav"><a href="/en/legal_notice/">Legal Notice</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/en/">Home</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/en/downloads/">Downloads</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/en/instructions/">Instructions</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/en/terms_of_use/">Terms of Use</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/en/privacy_policy/">Privacy Policy</a></li>
+        <li class="nav"><a href="https://spikemurphy.github.io/en/legal_notice/">Legal Notice</a></li>
     </ul>
 </nav>
 
