--- a/public/en/index.html
+++ b/public/en/index.html
@@ -38,7 +38,7 @@
   <div><h2 id="welcome-to-conformationlab-web">Welcome to ConformationLab Web</h2>
 <p><strong>ConformationLab Studio</strong> is a modern research tool for predicting and exploring protein structures.<br>
 Built on top of <strong>ColabFold</strong> and <strong>AlphaFold2</strong>, it combines machine learning with an accessible interface designed for young researchers.</p>
-<h3 id="with-conformationlab-studio-you-can">With ConformationLab Studio, you can</h3>
+<h3 id="with-conformationlab-studio">With ConformationLab Studio:</h3>
 <ul>
 <li>Generate protein structure predictions reliably</li>
 <li>Run locally on any Intel or Apple-Silicon-based machine without complex setup</li>
